crates/toml_edit/fixtures/invalid/control/rawstring-us.stderr
TOML parse error at line 1, column 21
  |
1 | rawstring-us = 'null'
  |                     ^
Invalid literal string
